--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://mysqldb:3306/tpfoyer_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/tpfoyer_db?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Web Server (Tomcat) configuration :
 server.port=8089
