--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,16 @@
             <version>4.6.1</version> <!-- Utilisez la dernière version stable -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+    <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-registry-prometheus</artifactId>
+        <scope>runtime</scope>
+    </dependency>
 
 
 
