--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.datasource.hikari.minimum-idle=5
 
 # Enable Actuator (if using Spring Actuator)
 management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=prometheus
+
