--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.datasource.hikari.minimum-idle=5
 management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.include=prometheus
 
+management.endpoint.prometheus.enabled=true
+
+
