--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3.8"
 
 services:
   mysqldb:
-    image: mysql:8.3
+    image: mysql:5.7
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=tpfoyer_db
+       MYSQL_ROOT_PASSWORD: chaima
+       MYSQL_DATABASE: tpfoyer_db
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - db:/var/lib/mysql
 
@@ -18,12 +18,12 @@ services:
     image: chaima21/tpfoyerimage:1.0.0
     restart: on-failure
     ports:
-      - 8089:8089
+      - "8089:8089"
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpfoyer_db?createDatabaseIfNotExist=true&useSSL=false",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : null,
+        "spring.datasource.password" : "chaima",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
