--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 # DB Configuration :
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/tpfoyer_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=true
+spring.datasource.password=chaima
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -11,15 +15,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8089
 server.servlet.context-path=/tpfoyer
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 # Logging configuration
 logging.level.com.zaxxer.hikari=INFO
 logging.level.org.springframework=INFO
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
 # Expose management endpoints
-
+management.endpoints.web.exposure.include=prometheus
 # HikariCP Configuration (Connection Pooling)
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
