--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DB Configuration :
-#spring.datasource.url=jdbc:mysql://mysqldb:3306/createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/tpfoyer_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysqldb:3306/createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/tpfoyer_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.datasource.username=root
 spring.datasource.password=chaima
@@ -8,7 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 
 # Web Server (Tomcat) configuration :
