--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   mysqldb:
     image: mysql:latest
-    restart: unless-stopped
+    restart: "no"
     environment:
        MYSQL_ROOT_PASSWORD: chaima
        MYSQL_DATABASE: tpfoyer_db
