--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-       MYSQL_ROOT_PASSWORD: chaima
-       MYSQL_DATABASE: tpfoyer_db
+       MYSQL_ROOT_PASSWORD: mysql
+       MYSQL_DATABASE: tpfoyer
     ports:
       - "3306:3306"
     volumes:
@@ -21,9 +21,9 @@ services:
       - "8089:8089"
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpfoyer_db?createDatabaseIfNotExist=true&useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.datasource.password" : "chaima",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpfoyer?createDatabaseIfNotExist=true&useSSL=false",
+        "spring.datasource.username" : "mysql",
+        "spring.datasource.password" : "mysql",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
