--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
        MYSQL_ROOT_PASSWORD: mysql
        MYSQL_DATABASE: tpfoyer
        MYSQL_INNODB_FORCE_REDO: "true"
+       INNODB_FORCE_RECOVERY: "1"
     ports:
       - "3306:3306"
     volumes:
