--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,9 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     environment:
-       MYSQL_ROOT_PASSWORD: mysql
+       MYSQL_ROOT_PASSWORD: chaimaa
        MYSQL_DATABASE: tpfoyer
-       MYSQL_INNODB_FORCE_REDO: "true"
-       INNODB_FORCE_RECOVERY: "1"
+       
     ports:
       - "3306:3306"
     volumes:
@@ -24,8 +23,8 @@ services:
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpfoyer?createDatabaseIfNotExist=true&useSSL=false",
-        "spring.datasource.username" : "mysql",
-        "spring.datasource.password" : "mysql",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "chaimaa",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL8Dialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
