--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
                     </excludes>
                 </configuration>
             </plugin>
+                 <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.9.1</version> <!-- Utilisez la version appropriée -->
+        </plugin>
+ 
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
