--- a/pom.xml
+++ b/pom.xml
@@ -94,35 +94,35 @@
             <version>3.9.1</version> <!-- Utilisez la version appropriée -->
         </plugin>
  
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <phase>test-compile</phase>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <phase>test</phase>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
-                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-                            <formats>
-                                <format>XML</format> <!-- Génération du rapport XML pour SonarQube -->
-                                <format>HTML</format> <!-- Génération optionnelle du rapport HTML pour consultation locale -->
-                            </formats>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <build>
+    <plugins>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.8</version>
+            <executions>
+                <!-- Prépare l'agent JaCoCo pour les tests -->
+                <execution>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+
+                <!-- Génère le rapport XML dans le dossier site/jacoco après les tests -->
+                <execution>
+                    <id>generate-report</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                    <configuration>
+                        <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>n>
 
         </plugins>
     </build>
