--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
                     </includes>
                 </configuration>
             </plugin>
+                 <plugin>
+  <groupId>org.sonarsource.scanner.maven</groupId>
+  <artifactId>sonar-maven-plugin</artifactId>
+  <version>3.9.1.2184</version>
+</plugin>
+
 
        <plugin>
             <groupId>org.apache.maven.plugins</groupId>
